--- a/index.html
+++ b/index.html
@@ -107,21 +107,17 @@
 
     <!--contacts-->
     <section id="contacts" class="contacts my-3">
-        <div class="container flex">
+        <div class="container grid">
             <div class="card">
-                <h2 class="text-center">פייסבוק</h2>
                 <a href="#"><img src="./img/facebook.png" alt=""></a>
             </div>
             <div class="card">
-                <h2 class="text-center">אימייל</h2>
-                <a href="#"><img src="./img/email.png" alt=""></a>
-            </div>
-            <div class="card">
-                <h2 class="text-center">אינסטגרם</h2>
                 <a href="#"><img src="./img/instagram.png" alt=""></a>
             </div>
             <div class="card">
-                <h2 class="text-center">טוויטר</h2>
+                <a href="#"><img src="./img/email.png" alt=""></a>
+            </div>
+            <div class="card">
                 <a href="#"><img src="./img/twitter.png" alt=""></a>
             </div>
         </div>
