--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container flex">
             <img class="card" src="./img/trans_israel.jpg" alt="">
             <div class="my-2 lg text-light">
-                <h1>טקסט דוגמא</h1>
+                <h1  class="responsive-title">על העמותה</h1>
                 <p class="text-light my-2 sm">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית קונדימנטום קורוס
                     בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
 
@@ -46,9 +46,9 @@
     </section>
 
     <!--about-->
-    <section id="about" class="about">
+    <section id="about" class="about text-transBlue">
         <div class="container flex">
-            <h1 class="xl">אודות</h1>
+            <h1  class="responsive-title">מי אנחנו</h1>
             <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום,
                 לפריקך תצטריק לרטי.
 
@@ -76,9 +76,9 @@
     </section>
 
     <!--services-->
-    <section id="services" class="services services-dent bg-primary">
+    <section id="services" class="services services-dent bg-transPink">
         <div class="container flex">
-            <h1 class="xl">שירותים</h1>
+            <h1 class="responsive-title">פעילות</h1>
             <p>לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום,
                 לפריקך תצטריק לרטי.
 
