--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <h1 class="logo">טרנסיות ישראל</h1>
             <nav>
                 <ul>
-                    <li><a href="#about">אודות</a></li>
-                    <li><a href="#services">שירותים</a></li>
+                    <li><a href="#about">מי אנחנו</a></li>
+                    <li><a href="#services">פעילויות</a></li>
                     <li><a href="#contacts">צרו קשר</a></li>
                 </ul>
             </nav>
@@ -128,13 +128,13 @@
         <div class="container flex">
             <h1 class="text-light md">טרנסיות ישראל</h1>
             <nav>
-                <ul>
-                    <li><a class="text-light" href="#about">אודות</a></li>
-                    <li><a class="text-light" href="#services">שירותים</a></li>
-                    <li><a class="text-light" href="#contacts">צרו קשר</a></li>
+                <ul class="text-center">
+                    <li><a class="text-light" href="#about"><p>על העמותה</p></a></li>
+                    <li><a class="text-light" href="#services"><p>מי אנחנו</p></a></li>
+                    <li><a class="text-light" href="#contacts"><p>צרו קשר</p></a></li>
                 </ul>
             </nav>
-            <div class="social">
+            <div class="social text-center">
                 <a href="#"><i class="fab fa-facebook fa-2x text-light"></i></a>
                 <a href="#"><i class="fab fa-instagram fa-2x text-light"></i></a>
                 <a href="#"><i class="fab fa-twitter fa-2x text-light"></i></a>
